javascript/ql/test/query-tests/NodeJS/InvalidExport/tst2a.js
// OK: use of `exports` as shorthand for `module.exports`
exports = module.exports = {};
exports.a = 23;
